# dynamic_inst_tui

./: .gitignore  .gitmodules  Makefile.am  README.md  bootstrap  configure.ac
client/: README.md  setup.py
client/dynamic_inst_client/: __main__.py  client.py  communicator.py  ui.py  util.py
client/uftrace_dynamic_client/: __main__.py  client.py  communicator.py  ui.py  util.py
server/: Makefile.am  dynamic-server.c  dynamic-symbols.c  dynamic-symbols.h  list.h  symbol.c  symbol.h
